@@ -7,6 +7,7 @@ Version 1.4
 Released: xx/xx/2011
 
 +Workaround focus issue in wxPython 2.9 TreeCtrl
++Major improvements and fixes to Python scope handling.
 
 #-----------------------------------------------------------------------------#
 Version 1.3
